第一次推送

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <article>
         <section class="card">
         <h2>關於我</h2>
-        <img src="https://picsum.photos/200/200?random" style="border-radius: 100%;" />
+        <img src="image/IMG20231021120610 (1).jpg" style="border-radius: 30%; width: 500px; height: auto;" />
         <p>陳筱莓 |  Joyce Chen </p>
         <p>中原大學 主修資訊管理學系 輔財務金融系 </p>
         <p>2003/10/12 | 天秤座 </p>
@@ -97,7 +97,12 @@
         <p>目前在中原大學推廣教育處擔任行政工讀</p>
         <p>透過工作學習到許多基礎行政技術，獲益良多</p>
     </section>
-      
+          <h3>聯絡資訊</h3>
+        </div>
+        <div class="mail">
+          <a href="https://www.instagram.com/joyce921012/" target="_blank"><img src="image/Instagram_logo_2022.svg.webp"style="border-radius: 30%; width: 100px; height: auto;"></a>
+          <a href="mailto:joyce15169@gmail" target="_blank"><img src="image/unnamed.png"style="border-radius: 30%; width: 100px; height: auto;"></a>
+        </div>
       </article>
 
     
